// ==========================================================================
// This is auto-generated by gf cli tool. DO NOT EDIT THIS FILE MANUALLY.
// 重要! 增加数据库字段，只能向后增加，否则不能使用工具生成proto
// ==========================================================================

syntax = "proto3";

package db.xianshi;

option go_package = "github.com/olaola-chat/rbp-proto/gen_pb/db/xianshi";

message EntityXsChatroom {
           //@inject_tag: orm:"rid,primary"         
    uint32 rid                                     = 1;  //                                                                                                                                                
           //@inject_tag: orm:"app_id"              
    int32  app_id                                  = 2;  //                                                                                                                                                
           //@inject_tag: orm:"uid"                 
    uint32 uid                                     = 3;  //                                                                                                                                                
           //@inject_tag: orm:"prefix"              
    string prefix                                  = 4;  //                                                                                                                                                
           //@inject_tag: orm:"name"                
    string name                                    = 5;  //                                                                                                                                                
           //@inject_tag: orm:"icon"                
    string icon                                    = 6;  //                                                                                                                                                
           //@inject_tag: orm:"type"                
    string type                                    = 7;  //                                                                                                                                                
           //@inject_tag: orm:"property"            
    string property                                = 8;  // 商业，爵位，家族房，个人(所有人都可以有), 游戏房,联盟房 vip 和 fleet 对应 auto, private 对应 private\ pretty:靓号房\ club:卡座,nest私密小窝    
           //@inject_tag: orm:"types"               
    string types                                   = 9;  // 类别，后台更改, 默认，点单，自由，点单厅无法修改theme，开黑厅，连连看，陪伴房，派对游戏房，直播游戏房，wedding婚礼无法修改theme，非诚勿扰玩法  
           //@inject_tag: orm:"description"         
    string description                             = 10; //                                                                                                                                                
           //@inject_tag: orm:"display_message"     
    uint32 display_message                         = 11; //                                                                                                                                                
           //@inject_tag: orm:"online_num"          
    uint32 online_num                              = 12; // 在线人数                                                                                                                                       
           //@inject_tag: orm:"online_admin"        
    uint32 online_admin                            = 13; // 房主是否现在                                                                                                                                   
           //@inject_tag: orm:"version"             
    uint32 version                                 = 14; //                                                                                                                                                
           //@inject_tag: orm:"deleted"             
    int32  deleted                                 = 15; // 是否已经被屏蔽， -1 初始化 0 正常 1 关闭 2 删除                                                                                                
           //@inject_tag: orm:"boss"                
    uint32 boss                                    = 16; //                                                                                                                                                
           //@inject_tag: orm:"reception"           
    int32  reception                               = 17; // 是否开启招待位                                                                                                                                 
           //@inject_tag: orm:"paier"               
    int32  paier                                   = 18; // 是否开启老板位                                                                                                                                 
           //@inject_tag: orm:"theme"               
    string theme                                   = 19; //                                                                                                                                                
           //@inject_tag: orm:"background"          
    string background                              = 20; //                                                                                                                                                
           //@inject_tag: orm:"counter"             
    uint32 counter                                 = 21; //                                                                                                                                                
           //@inject_tag: orm:"mode"                
    string mode                                    = 22; // auto 自由上麦模式，lock 默认锁定模式，只能由管理员抱上麦                                                                                       
           //@inject_tag: orm:"package"             
    uint32 package                                 = 23; // 麦上打赏统计                                                                                                                                   
           //@inject_tag: orm:"o_total"             
    uint32 o_total                                 = 24; // 派单数                                                                                                                                         
           //@inject_tag: orm:"o_num"               
    uint32 o_num                                   = 25; // 成功单数                                                                                                                                       
           //@inject_tag: orm:"o_duration"          
    uint32 o_duration                              = 26; // 成功总耗时                                                                                                                                     
           //@inject_tag: orm:"nine"                
    uint32 nine                                    = 27; // 9麦位模式                                                                                                                                      
           //@inject_tag: orm:"dateline"            
    uint32 dateline                                = 28; // 创建时间                                                                                                                                       
           //@inject_tag: orm:"password"            
    string password                                = 29; //                                                                                                                                                
           //@inject_tag: orm:"weight"              
    int32  weight                                  = 30; //                                                                                                                                                
           //@inject_tag: orm:"display_rank"        
    uint32 display_rank                            = 31; //                                                                                                                                                
           //@inject_tag: orm:"bicon"               
    string bicon                                   = 32; //                                                                                                                                                
           //@inject_tag: orm:"sex"                 
    uint32 sex                                     = 33; //                                                                                                                                                
           //@inject_tag: orm:"close_box"           
    uint32 close_box                               = 34; //                                                                                                                                                
           //@inject_tag: orm:"game"                
    string game                                    = 35; //                                                                                                                                                
           //@inject_tag: orm:"state"               
    uint32 state                                   = 36; // 0：正常，1：隐藏，2：仅好友可见，3：仅粉丝可见                                                                                                 
           //@inject_tag: orm:"auction"             
    int32  auction                                 = 37; // 是否开启拍卖                                                                                                                                   
           //@inject_tag: orm:"room_factory_type"   
    string room_factory_type                       = 38; // 创造房间的工厂type                                                                                                                             
           //@inject_tag: orm:"fixed_tag_id"        
    uint32 fixed_tag_id                            = 39; // 指定的房间的标签显示id                                                                                                                         
           //@inject_tag: orm:"room_module_id"      
    uint32 room_module_id                          = 40; // 冗余字段：房间的模版id                                                                                                                         
           //@inject_tag: orm:"settlement_channel"  
    string settlement_channel                      = 41; // 结算频道                                                                                                                                       
           //@inject_tag: orm:"gift_wish"           
    uint32 gift_wish                               = 42; // 心愿礼物功能，0-关闭，1-开启                                                                                                                   
           //@inject_tag: orm:"area"                
    string area                                    = 43; //                                                                                                                                                
           //@inject_tag: orm:"language"            
    string language                                = 44; //                                                                                                                                                
           //@inject_tag: orm:"entry_limit"         
    uint32 entry_limit                             = 45; // 进房限制，0：公开；1：朋友可进，2：邀请可进                                                                                                    
           //@inject_tag: orm:"chat_limit"          
    uint32 chat_limit                              = 46; // 聊天限制，0：无限制，1：全员禁麦                                                                                                               
}