syntax = "proto3";
package rbp.rpc.room;

import "rbp/plugin/option.proto";
import "rpc/room/room_message.proto";


option go_package = "github.com/olaola-chat/rbp-proto/rpcclient/room";


service RoomInfo {
    option (rbp.plugin.rbp_service).name = "Room.Info";

    rpc InRoom (rbp.rpc.room.ReqUid) returns (rbp.rpc.room.RepRid);
}